--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -8,4 +8,10 @@
             android:id="@+id/textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+  <Button xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/submitbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_submit"
+            android:onClick="buttonObserver"/>
 </LinearLayout>
